# wgpu_lorenz

./: Cargo.toml
src/: camera.rs  compute.rs  compute.wgsl  config.rs  draw.wgsl  env.rs  input.rs  instance.rs  lorenz.rs  main.rs  render.rs  state.rs  texture.rs  vertex.rs
