[package]
name = "wgpu_lorenz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.13", features = ["derive"] }
glam = "0.24"
image = { version = "0.24.6", default-features = false, features = ["png"] }
pollster = "0.3"
rand = "0.8.5"
wgpu = "0.16"
winit = "0.28"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
